skaffold/hashi-demo/deploy/deploy.hashi-app-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-v1
  namespace: hashi-demo
  labels:
    app: application
    version: v1
spec:
  selector:
    matchLabels:
      app: application
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: application
        version: v1
      annotations:
        kubernetes.io/change-cause: "001"
    spec:
      serviceAccountName: application
      containers:
      - name: application
        image: notebook.local:5000/hashi-demo/hashi-demo-app:1.0.0
        ports:
        - name: application
          containerPort: 5000
        resources:
          requests:
            cpu: 256m
            memory: 256M
          limits:
            cpu: 256m
            memory: 256M
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 15
          httpGet:
            path: /api/probe
            port: application
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 15
          httpGet:
            path: /api/probe
            port: application
