skaffold/hashi-demo/deploy/deploy.hashi-client.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  progressDeadlineSeconds: 120
  minReadySeconds: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: client
        version: v1
      annotations:
        kubernetes.io/change-cause: "001"
    spec:
      volumes:
      - name: client
        configMap:
          name: client
          items:
          - key: example.com.crt
            path: example.com.crt
      serviceAccountName: client
      containers:
      - name: curl-local
        image: notebook.local:5000/webapp:latest
        command: ["/bin/bash", "-c", "while true; do curl -v http://$HASHI_HOST/api/posts; sleep 1; done"]
      - name: curl-ingress
        image: notebook.local:5000/webapp:latest
        command: ["/bin/bash", "-c", "while true; do curl -v -HHost:$HASHI_HOST --resolve $HASHI_HOST:443:$HASHI_ISTIO_INGRESS_SERVICE --cacert $HASHI_CERT https://$HASHI_HOST/; sleep 1; done"]
        volumeMounts:
        - name: client
          mountPath: /client
      - name: curl-google
        image: notebook.local:5000/webapp:latest
        command: ["/bin/bash", "-c", "while true; do curl -v -L https://$HASHI_HOST/; sleep 1; done"]
      - name: client
        image: notebook.local:5000/webapp:latest
        ports:
        - name: client
          containerPort: 8080
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: client
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: client
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
