skaffold/hashi-demo/deploy/deploy.hashi-data.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data
  namespace: hashi-demo
  labels:
    app: data
    version: v1
spec:
  selector:
    matchLabels:
      app: data
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: data
        version: v1
      annotations:
        kubernetes.io/change-cause: "001"
    spec:
      serviceAccountName: data
      volumes:
      - name: hashi-demo
        persistentVolumeClaim:
          claimName: hashi-demo
      containers:
      - name: data
        image: notebook.local:5000/hashi-demo/hashi-demo-data:1.0.0
        volumeMounts:
        - name: hashi-demo
          mountPath: /database
        ports:
        - name: data
          containerPort: 5432
        resources:
          requests:
            cpu: 256m
            memory: 256M
          limits:
            cpu: 256m
            memory: 256M
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 15
          exec:
            command: ["psql", "-w", "-U", "postgres", "-d", "posts", "-c", "SELECT 1"]
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 15
          exec:
            command: ["psql", "-w", "-U", "postgres", "-d", "posts", "-c", "SELECT 1"]
