skaffold/hashi-demo/deploy/deploy.hashi-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presentation
  labels:
    app: presentation
    version: v1
spec:
  selector:
    matchLabels:
      app: presentation
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: presentation
        version: v1
      annotations:
        kubernetes.io/change-cause: "001"
    spec:
      serviceAccountName: presentation
      containers:
      - name: curl-backend
        image: notebook.local:5000/webapp:latest
        command: ["/bin/bash", "-c", "while true; do curl -v http://$HASHI_BACK/api/posts; sleep 1; done"]
      - name: presentation
        image: notebook.local:5000/hashi-demo/hashi-demo-web:1.0.0
        ports:
        - containerPort: 80
          name: presentation
        resources:
          requests:
            cpu: 256m
            memory: 256M
          limits:
            cpu: 256m
            memory: 256M
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 15
          httpGet:
            path: /probe.html
            port: presentation
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 15
          httpGet:
            path: /probe.html
            port: presentation
